[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linkedcrawler"
version = "0.1.0"
description = "A Botasaurus-based LinkedIn activity crawler with fixture-driven tests"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Adlio" }]
dependencies = [
  "beautifulsoup4>=4.14.0",
  "botasaurus>=4.0.97",
  "lxml>=5.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
linkedcrawler = "linkedcrawler.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
